--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
     mcp-git
+    돼나 보자
 </body>
 </html>
